打包名称修改

--- a/crs-admin/pom.xml
+++ b/crs-admin/pom.xml
@@ -144,7 +144,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>precrs.cf139.com</finalName>
+		<finalName>city-api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
