--- a/crs-admin/src/main/resources/application-dev.yml
+++ b/crs-admin/src/main/resources/application-dev.yml
@@ -51,6 +51,23 @@ spring:
                 config:
                   multi-statement-allow: true
 
+    #kafka
+  kafka:
+    consumer:
+      bootstrap-servers: 10.253.36.37:9092
+      group-id: city-dev
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      auto-offset-reset: earliest                       #最早未被消费的offset earliest
+      max-poll-records: 200                         #批量消费一次最大拉取的数据量
+      enable-auto-commit: false                         #是否开启自动提交
+      auto-commit-interval: 1000                        #自动提交的间隔时间
+    listener:
+      ack-mode: MANUAL_IMMEDIATE
+      type: BATCH                                #是否开启批量消费，true表示批量消费
+      concurrency: 1                                  #设置消费的线程数
+      poll-timeout: 1500
+
 # 配置slq打印日志
 mybatis-plus:
   configuration:
@@ -66,6 +83,13 @@ check:
     url: http://192.168.1.72:8060
     name: Server
     apikey: f997bc19a9410ded2c0eb17f24e0690d
+
+topic:
+  lh: CLWGPS-LH
+  hw: CLWGPS-HW
+  zf: CLWGPS-ZF
+
+
 
 
 
