--- a/crs-admin/src/main/resources/application-dev.yml
+++ b/crs-admin/src/main/resources/application-dev.yml
@@ -55,7 +55,7 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: 10.253.36.37:9092
-      group-id: city-dev
+      group-id: city-dev-car
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: earliest                       #最早未被消费的offset earliest
