--- a/crs-common/pom.xml
+++ b/crs-common/pom.xml
@@ -104,7 +104,7 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>12.1.0.1-atlassian-hosted</version>
+			<version>11.2.0.2.0</version>
 		</dependency>
 
 
