--- a/crs-admin/src/main/resources/application-dev.yml
+++ b/crs-admin/src/main/resources/application-dev.yml
@@ -116,9 +116,9 @@ check:
     name: Server
     apikey: f997bc19a9410ded2c0eb17f24e0690d
 client:
-  url: http://iam.bamboocloud.com
-  client-id: iam
-  client-secret: 889c3af4f806401da37e5b33c9f0f650
+  url: https://iam.szzhcg.com
+  client-id: apphub_oauth
+  client-secret: 0427f05a070d45169da2ad5aed47b8ed
 
 
 
