--- a/crs-admin/src/main/resources/application-dev.yml
+++ b/crs-admin/src/main/resources/application-dev.yml
@@ -50,38 +50,38 @@ spring:
               wall:
                 config:
                   multi-statement-allow: true
-        orcale:
-          username: query
-          password: 888888
-          url: jdbc:oracle:thin:@192.168.3.35:1521/xhdb
-          driver-class-name: oracle.jdbc.OracleDriver
-          druid: # 以下参数针对每个库可以重新设置druid参数
-            initial-size: 10
-            max-active: 100
-            min-idle: 10
-            max-wait: 6000
-            pool-prepared-statements: true
-            max-pool-prepared-statement-per-connection-size: 20
-            time-between-eviction-runs-millis: 60000
-            min-evictable-idle-time-millis: 300000
-            #Oracle需要打开注释
-            #validation-query: SELECT 1 FROM DUAL
-            test-while-idle: true
-            test-on-borrow: false
-            test-on-return: false
-            stat-view-servlet:
-              enabled: true
-              url-pattern: /druid/*
-              #login-username: admin
-              #login-password: admin
-            filter:
-              stat:
-                log-slow-sql: true
-                slow-sql-millis: 1000
-                merge-sql: false
-              wall:
-                config:
-                  multi-statement-allow: true
+#        orcale:
+#          username: query
+#          password: 888888
+#          url: jdbc:oracle:thin:@192.168.3.35:1521/xhdb
+#          driver-class-name: oracle.jdbc.OracleDriver
+#          druid: # 以下参数针对每个库可以重新设置druid参数
+#            initial-size: 10
+#            max-active: 100
+#            min-idle: 10
+#            max-wait: 6000
+#            pool-prepared-statements: true
+#            max-pool-prepared-statement-per-connection-size: 20
+#            time-between-eviction-runs-millis: 60000
+#            min-evictable-idle-time-millis: 300000
+#            #Oracle需要打开注释
+#            #validation-query: SELECT 1 FROM DUAL
+#            test-while-idle: true
+#            test-on-borrow: false
+#            test-on-return: false
+#            stat-view-servlet:
+#              enabled: true
+#              url-pattern: /druid/*
+#              #login-username: admin
+#              #login-password: admin
+#            filter:
+#              stat:
+#                log-slow-sql: true
+#                slow-sql-millis: 1000
+#                merge-sql: false
+#              wall:
+#                config:
+#                  multi-statement-allow: true
 
 
     #kafka
@@ -115,6 +115,9 @@ check:
     url: http://192.168.1.72:8060
     name: Server
     apikey: f997bc19a9410ded2c0eb17f24e0690d
+  order:
+    url: http://192.168.1.73:8080
+    apikey: 0125E6D6-8D59-4E23-9104-ACE745F6BF37
 client:
   url: https://iam.szzhcg.com
   client-id: apphub_oauth
