--- a/crs-admin/src/main/resources/application-dev.yml
+++ b/crs-admin/src/main/resources/application-dev.yml
@@ -19,9 +19,9 @@ spring:
     dynamic:
       datasource:
         master:
-          username: root
-          password: 123456
-          url: jdbc:mysql://192.168.1.79:3306/citymanager?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+          username: city
+          password: '!#456QWEasd&'
+          url: jdbc:mysql://47.106.199.193:3306/citymanager?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
           driver-class-name: com.mysql.cj.jdbc.Driver
           druid: # 以下参数针对每个库可以重新设置druid参数
             initial-size: 10
