--- a/crs-admin/src/main/resources/application-uat.yml
+++ b/crs-admin/src/main/resources/application-uat.yml
@@ -4,7 +4,7 @@ spring:
     database: 2
     host: 127.0.0.1
     port: 6379
-    password: '*&(*%QWaf4534!123dsg'
+    password:
     timeout: 20000ms  # 连接超时时长（毫秒）
     jedis:
       pool:
@@ -19,8 +19,8 @@ spring:
     dynamic:
       datasource:
         master:
-          username: city
-          password: '!#456QWEasd&'
+          username: root
+          password: '123456'
           url: jdbc:mysql://127.0.0.1:3306/citymanager?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
           driver-class-name: com.mysql.cj.jdbc.Driver
           druid: # 以下参数针对每个库可以重新设置druid参数
@@ -50,6 +50,55 @@ spring:
               wall:
                 config:
                   multi-statement-allow: true
+    #        orcale:
+    #          username: query
+    #          password: 888888
+    #          url: jdbc:oracle:thin:@192.168.3.35:1521/xhdb
+    #          driver-class-name: oracle.jdbc.OracleDriver
+    #          druid: # 以下参数针对每个库可以重新设置druid参数
+    #            initial-size: 10
+    #            max-active: 100
+    #            min-idle: 10
+    #            max-wait: 6000
+    #            pool-prepared-statements: true
+    #            max-pool-prepared-statement-per-connection-size: 20
+    #            time-between-eviction-runs-millis: 60000
+    #            min-evictable-idle-time-millis: 300000
+    #            #Oracle需要打开注释
+    #            #validation-query: SELECT 1 FROM DUAL
+    #            test-while-idle: true
+    #            test-on-borrow: false
+    #            test-on-return: false
+    #            stat-view-servlet:
+    #              enabled: true
+    #              url-pattern: /druid/*
+    #              #login-username: admin
+    #              #login-password: admin
+    #            filter:
+    #              stat:
+    #                log-slow-sql: true
+    #                slow-sql-millis: 1000
+    #                merge-sql: false
+    #              wall:
+    #                config:
+    #                  multi-statement-allow: true
+
+
+    #kafka
+  kafka:
+    consumer:
+      bootstrap-servers: 10.253.36.37:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      auto-offset-reset: earliest                       #最早未被消费的offset earliest
+      max-poll-records: 200                         #批量消费一次最大拉取的数据量
+      enable-auto-commit: false                         #是否开启自动提交
+      auto-commit-interval: 1000                        #自动提交的间隔时间
+    listener:
+      ack-mode: MANUAL_IMMEDIATE
+      type: BATCH                                #是否开启批量消费，true表示批量消费
+      concurrency: 1                                  #设置消费的线程数
+      poll-timeout: 1500
 
 # 配置slq打印日志
 mybatis-plus:
@@ -58,11 +107,25 @@ mybatis-plus:
 
 check:
   sql: # 考评sql配置
-    url: http://192.168.1.72:9090
+    url: http://127.0.0.1:19090
     sqlType: MYSQL-DB-server,PostgreSQL
-    apikey: 154e1ff58e5e66db2a8e524b41eff082
+    apikey: 7a1b9b6b6e561bb840a4897706552a93
     middlewareType: Tomcat-server
   server:
-    url: http://192.168.1.72:8060
+    url: http://127.0.0.1:18060
     name: Server
-    apikey: f997bc19a9410ded2c0eb17f24e0690d
+    apikey: 3339c7cc8bd9b2e6a3ea05091a9a638f
+  order:
+    url: http://127.0.0.1:18080
+    apikey: AE4DADDE-BC94-4BE2-8AC6-73984663D096
+client:
+  url: https://iam.szzhcg.com
+  client-id: apphub_oauth
+  client-secret: 0427f05a070d45169da2ad5aed47b8ed
+
+
+
+
+
+
+
