内置tomcat版本修改

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <properties>
+        <tomcat.version>9.0.33</tomcat.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
