--- a/crs-admin/src/main/resources/application-uat.yml
+++ b/crs-admin/src/main/resources/application-uat.yml
@@ -134,7 +134,7 @@ check:
     url: http://127.0.0.1:18080
     apikey: AE4DADDE-BC94-4BE2-8AC6-73984663D096
 client:
-  url: https://iam.szzhcg.com
+  url: https://szzhcg.com/ebus/iam
   client-id: apphub_oauth
   client-secret: 0427f05a070d45169da2ad5aed47b8ed
 
