--- a/crs-admin/src/main/resources/application-uat.yml
+++ b/crs-admin/src/main/resources/application-uat.yml
@@ -133,6 +133,7 @@ check:
   order:
     url: http://127.0.0.1:18080
     apikey: AE4DADDE-BC94-4BE2-8AC6-73984663D096
+  iotDay: -5
 client:
   url: https://szzhcg.com/ebus/iam
   client-id: znkp
