--- a/crs-common/pom.xml
+++ b/crs-common/pom.xml
@@ -101,11 +101,11 @@
 		</dependency>
 
 		<!--oracle-->
-		<dependency>
+		<!--<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.2.0</version>
-		</dependency>
+		</dependency>-->
 
 
 		<!-- dozer依赖 -->
