--- a/crs-admin/src/main/resources/application-uat.yml
+++ b/crs-admin/src/main/resources/application-uat.yml
@@ -140,11 +140,12 @@ client:
   client-secret: 3696035b52c14369a202a45a9b56170a
   syn-user-url: https://szzhcg.com/ebus/iam/integration
 iot:
-  iot_huanweiche_status: 环卫车
-  iot_lvhuache_status: 绿化车
-  iot_shexiangtou_status: 摄像头
-  iot_zhifache_status: 执法车
-  iot_zhifaduijiang_status: 对讲机
+  device:
+    iot_huanweiche_status: 环卫车
+    iot_lvhuache_status: 绿化车
+    iot_shexiangtou_status: 摄像头
+    iot_zhifache_status: 执法车
+    iot_zhifaduijiang_status: 对讲机
 
 
 
