--- a/crs-admin/src/main/resources/application-uat.yml
+++ b/crs-admin/src/main/resources/application-uat.yml
@@ -146,7 +146,7 @@ iot:
     iot_shexiangtou_status: 摄像头
     iot_zhifache_status: 执法车
     iot_zhifaduijiang_status: 对讲机
-
+checkPdf: E:\checkResult\
 
 
 
